...

                android:textColor="@color/mainTextColor"
                android:textSize="14sp"
                />

            <SeekBar
                android:id="@+id/seekBarWater"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/settingsTempWater"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
...
                android:thumbTint="@color/seekThumb"
                android:progressBackgroundTint="@color/warmRed"
                android:progressBackgroundTintMode="src_over"
                />

            <TextView
                android:id="@+id/textTempMidWater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                app:layout_constraintBottom_toTopOf="@id/seekBarWater"
                app:layout_constraintStart_toStartOf="parent"
...
                android:fontFamily="@font/roboto_medium"

                android:background="@color/transparent"
                />

            <TextView
                android:id="@+id/textTempLowWater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:textSize="12sp"
                android:textColor="@color/mainTextColor"
...

                app:layout_constraintTop_toBottomOf="@id/seekBarWater"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/textTempHighWater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:textSize="12sp"
                android:textColor="@color/mainTextColor"
...

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textShowWater"
                android:layout_marginTop="14dp"
                >
                <CheckBox
                    android:id="@+id/checkBoxColdWater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
...

                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/textShowWater"
                android:layout_marginTop="14dp">

                <CheckBox
                    android:id="@+id/checkBoxWarmWater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
...

                android:textColor="@color/mainTextColor"
                android:textSize="14sp"
                />

            <SeekBar
                android:id="@+id/seekBarAir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/settingsAir"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="32dp"
...
                android:thumbTint="@color/seekThumb"
                android:progressBackgroundTint="@color/warmRed"
                android:progressBackgroundTintMode="src_over"
                />

            <TextView
                android:id="@+id/textTempMidAir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:textSize="12sp"
                android:textColor="@color/mainTextColor"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/transparent"
                />

            <TextView
                android:id="@+id/textTempLowAir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:textSize="12sp"
                android:textColor="@color/mainTextColor"
...

                app:layout_constraintTop_toBottomOf="@id/seekBarAir"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/textTempHighAir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:textSize="12sp"
                android:textColor="@color/mainTextColor"
...

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textShowAir"
                android:layout_marginTop="14dp"
                >
                <CheckBox
                    android:id="@+id/checkBoxColdAir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
...

                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/textShowAir"
                android:layout_marginTop="14dp">

                <CheckBox
                    android:id="@+id/checkBoxWarmAir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
...
