...
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageButton
            android:id="@+id/buttonBack"
            android:background="@color/backgroundDark"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTopBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutInScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundLight">

            <TextView
                android:id="@+id/textPlaceName"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="32dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_medium"
...
                app:layout_constraintTop_toTopOf="@+id/textPlaceName"
                android:contentDescription="@string/water_icon"
                app:srcCompat="@drawable/ic_nodatawave"
                tools:srcCompat="@drawable/water_blue" />

            <TextView
                android:id="@+id/textTempWater"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/no_data"
                android:textColor="@color/mainTextColor"
                android:textSize="16sp"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:layout_constraintEnd_toEndOf="@+id/imageWater"
...
                tools:textColor="@color/place_currents_info_weak"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/textCurrents"
                app:layout_constraintEnd_toStartOf="@+id/buttonCurrentsInfo"
                app:layout_constraintTop_toTopOf="@+id/textCurrents" />

            <TextView
                android:id="@+id/textUVResult"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/no_data"
...
                android:src="@drawable/info"
                app:layout_constraintBottom_toBottomOf="@+id/textCurrentsResult"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textCurrentsResult" />

            <ImageButton
                android:id="@+id/buttonUVInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/backgroundLight"
                android:contentDescription="@string/place_button_info_uv"
                android:src="@drawable/info"
                app:layout_constraintBottom_toBottomOf="@+id/textUVResult"
...
                app:layout_constraintBottom_toBottomOf="@+id/imagePublicTransport"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imagePublicTransport" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutCurrentsInfo"
                android:background="@drawable/outline_rounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_marginHorizontal="38dp"
                android:paddingHorizontal="26dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/buttonCurrentsInfo"
                android:visibility="gone">

                <ImageButton
                    android:id="@+id/buttonCurrentsCloseInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/backgroundDark"
                    android:src="@drawable/xclose"
                    app:layout_constraintEnd_toEndOf="parent"
...
                    android:clickable="true"
                    android:focusable="true" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutUVInfo"
                android:background="@drawable/outline_rounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_marginHorizontal="38dp"
                android:paddingHorizontal="26dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/buttonUVInfo"
                android:visibility="gone">

                <ImageButton
                    android:id="@+id/buttonUVCloseInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/backgroundDark"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/xclose"
                    app:layout_constraintEnd_toEndOf="parent"
...
