...
    android:layout_marginBottom="?attr/actionBarSize"
    android:background="@color/backgroundLight"
    tools:context=".uiAndViewModels.placesList.PlacesListFragment"
    >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_viewPlaces"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:paddingBottom="?attr/actionBarSize"

        app:layout_constraintTop_toBottomOf="@+id/searchLayer"
...
